# BALL

./: .gitignore  CMakeLists.txt
BALLTools/: CMakeLists.txt
BALLTools/TEST/: CMakeLists.txt
BALLTools/TEST/cmake/: BALLToolsTestConfig.h.in
BALLTools/TEST/data/: LigandFileMerger_01.drf  LigandFileMerger_01.mol2  LigandFileMerger_01.sdf  LigandFileMerger_02.mol2  LigandFileMerger_02.sdf  LigandFileSplitter_01.drf  LigandFileSplitter_01.mol2  LigandFileSplitter_01.sdf  LigandFileSplitter_01_0.drf  LigandFileSplitter_01_1.drf  LigandFileSplitter_01_2.drf  LigandFileSplitter_01_nm6_2.mol2  LigandFileSplitter_01_no12_1.sdf  LigandFileSplitter_01_no12_10.sdf  LigandFileSplitter_01_no12_11.sdf  LigandFileSplitter_01_no12_2.sdf  LigandFileSplitter_01_no12_3.sdf  LigandFileSplitter_01_no12_4.sdf  LigandFileSplitter_01_no12_5.sdf  LigandFileSplitter_01_no12_6.sdf  LigandFileSplitter_01_no12_7.sdf  LigandFileSplitter_01_no12_8.sdf  LigandFileSplitter_01_no12_9.sdf  LigandFileSplitter_01_no3_1.drf  LigandFileSplitter_01_no3_2.drf  LigandFileSplitter_01_no3_3.drf  LigandFileSplitter_01_no4_1.mol2  LigandFileSplitter_01_no4_1.sdf  LigandFileSplitter_01_no4_2.mol2  LigandFileSplitter_01_no4_2.sdf  LigandFileSplitter_01_no4_3.mol2  LigandFileSplitter_01_no4_3.sdf  LigandFileSplitter_01_no4_4.mol2  LigandFileSplitter_01_no4_4.sdf  LigandFileSplitter_02.mol2  LigandFileSplitter_02_no2_1.mol2  LigandFileSplitter_02_no2_2.mol2  PDBFile_01.cif  PDBFile_01.xml  PDBReceptorSplitter_LIG.mol
BALLTools/TEST/source/: PDBDownload_TEST.C  sources.cmake
BALLTools/include/BALLTools/: toolTest.h
BALLTools/source/: AMBER.C  AddHydrogens.C  AddMissingAtoms.C  AntitargetRescorer.C  AssignBondOrders.C  AssignChargesFromRules.C  AssignPositionsFromTemplate.C  AssignRadiiFromRules.C  AssignTypenamesFromRules.C  AtomTyper.C  AutoModel.C  BindingDBCleaner.C  BondOrderAssigner.C  CalculateBindingFreeEnergy.C  CalculateEnergy.C  CalculateRMSD.C  CalculateSolvationFreeEnergy.C  ClipProteinAroundLigand.C  CombiLibGenerator.C  ComputeConnectedComponents.C  ComputeDockingRMSD.C  ConstraintsFinder.C  Converter.C  CrystalGenerator.C  DCD2DCD.C  DockPoseClustering.C  DockResultMerger.C  EvenSplit.C  ExportFragment.C  ExtractClustersFromWardTree.C  ExtractProteinChains.C  ExtractProteinSequence.C  FeatureSelector.C  FingerprintSimilarityClustering.C  FingerprintSimilarityNetwork.C  FingerprintSimilaritySearch.C  GridBuilder.C  HIN2MOL2.C  IMGDock.C  InputPartitioner.C  (+53 more)
BALL_core/: CMakeLists.txt
BALL_core/TEST/: CMakeLists.txt
BALL_core/TEST/source/: ALLModel_test.C  AddHydrogenProcessor_test.C  AdvElectrostatic_test.C  AmberEvaluation_test.C  AmberFF_test.C  AmiraMeshFile_test.C  AnalyticalGeometry_test.C  AnalyticalSES_test.C  Angle_test.C  AnisotropyShiftProcessor_test.C  AntechamberFile_test.C  AromaticRingStacking_test.C  AromaticityProcessor_test.C  AssignBondOrderProcessor_test.C  AtomBijection_test.C  AtomBondIteratorTraits_test.C  AtomContainer_test.C  AtomIterator_test.C  AtomTypes_test.C  AtomVector_test.C  Atom_test.C  AtomicContactEnergy_test.C  AutoDeletable_test.C  BaseFunction_test.C  BaseIterator_test.C  BidirectionalIterator_test.C  BinaryFileAdaptor_test.C  BinaryFingerprintMethods_test.C  BindingPocketProcessor_test.C  BitVector_test.C  Bit_test.C  Bond_test.C  Box3_test.C  Bruker1DFile_test.C  Bruker2DFile_test.C  BurialDepth_test.C  BuriedPolar_test.C  CCP4File_test.C  CHPISlick_test.C  CHPI_test.C  (+299 more)
BALL_core/cmake/: BALLComponents.cmake
BALL_core/cmake/templates/: config.h.in  version.h.in
BALL_core/include/: BALL.doc
BALL_core/include/BALL_core/: common.h  concept.h  datatype.h  energy.h  format.h  kernel.h  maths.h  molmec.h  solvation.h  structure.h  system.h
BALL_core/source/COMMON/: constants.C  exception.C  hash.C  init.C  logStream.C  rtti.C  sources.cmake  version.C
BALL_core/source/CONCEPT/: XDRPersistenceManager.C  autoDeletable.C  client.C  composite.C  embeddable.C  enumerator.C  factory.C  molecularInformation.C  moleculeObjectCreator.C  object.C  objectCreator.C  persistenceManager.C  predicate.C  preferencesObject.C  processor.C  property.C  selectable.C  sources.cmake  textPersistenceManager.C  timeStamp.C  visitor.C
BALL_core/source/DATATYPE/: bitVector.C  contourSurface.C  hashGrid.C  options.C  regularData1D.C  regularData2D.C  regularData3D.C  regularExpression.C  sources.cmake  string.C
BALL_core/source/DOCKING/: geometricFit.C  sources.cmake
BALL_core/source/ENERGY/: atomicContactEnergy.C  composedEnergyProcessor.C  coulomb.C  distanceCoulomb.C  energyProcessor.C  sources.cmake
BALL_core/source/FORMAT/: CCP4File.C  CIFFile.C  CIFParserLexer.l  CIFParserParser.y  DBInterface.C  DCDFile.C  DSN6File.C  GAMESSDatFile.C  GAMESSDatParserLexer.l  GAMESSDatParserParser.y  GAMESSLogFile.C  GAMESSLogParserLexer.l  GAMESSLogParserParser.y  HINFile.C  HMOFile.C  INIFile.C  JCAMPFile.C  KCFFile.C  MOL2File.C  MOLFile.C  MOPACInputFile.C  MOPACOutputFile.C  NMRStarFile.C  PDBFileDetails.C  PDBFileGeneral.C  PDBInfo.C  PDBRecords.C  PDBdefs.C  SCWRLRotamerFile.C  SDFile.C  TRRFile.C  XYZFile.C  amiraMeshFile.C  antechamberFile.C  bruker1DFile.C  bruker2DFile.C  commandlineParser.C  dockResultFile.C  genericMolFile.C  lineBasedFile.C  (+10 more)
BALL_core/source/KERNEL/: PDBAtom.C  PTE.C  atom.C  atomContainer.C  bond.C  chain.C  expression.C  expressionParser.C  expressionParserLexer.l  expressionParserParser.y  expressionPredicate.C  expressionTree.C  extractors.C  fragment.C  global.C  molecularInteractions.C  molecule.C  nucleicAcid.C  nucleotide.C  predicate.C  protein.C  residue.C  secondaryStructure.C  selector.C  sources.cmake  standardPredicates.C  system.C
BALL_core/source/MATHS/: FFT1D.C  (+28 more)
BALL_view/: CMakeLists.txt
BALL_view/BALLView/: CMakeLists.txt  demoTutorialDialog.C  demoTutorialDialog.h  main.C  mainframe.C  mainframe.h
BALL_view/TEST/: CMakeLists.txt
src/: CMakeLists.txt
src/ball_core/: CMakeLists.txt  CMakeLists.txt.autosave
src/ball_python/: CMakeLists.txt
src/ball_view/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+3327 files in other folders)
